--- a/exercises/Block 5: JavaScript: DOM, Events and Web Storage/Day_01/exercise_01.html
+++ b/exercises/Block 5: JavaScript: DOM, Events and Web Storage/Day_01/exercise_01.html
@@ -70,12 +70,20 @@
             }
             changeRedSquareColorToWhite()
 
-        //
+        //4. Crie uma função que corrija o texto da tag <h1>.
+
+            function correctsTheTagText() {
+                let correctText = document.getElementsByTagName('h1')[0];
+                correctText.innerText = 'Exercício 5.1 - JavaScript';
+            }
+            correctsTheTagText()
+
+        //    
          /*
  
  
  
- 4. Crie uma função que corrija o texto da tag <h1>.
+ 
  5. Crie uma função que modifique todo o texto da tag <p> para maiúsculo.
  6. Crie uma função que exiba o conteúdo de todas as tags <p> no console.
         */
