--- a/exercises/Block 5: JavaScript: DOM, Events and Web Storage/Day_02/exercise_01.html
+++ b/exercises/Block 5: JavaScript: DOM, Events and Web Storage/Day_02/exercise_01.html
@@ -69,10 +69,18 @@
     body.appendChild(divMainContent);
 
 //3. Adicione a tag div com a classe center-content como filho da tag div criada no passo 2;
-    
+    let divCenterContent = document.createElement('div');
+    divCenterContent.className = 'center-content';
+    document.querySelector('.main-content').appendChild(divCenterContent);
 
 //4. Adicione a tag p como filho do div criado no passo 3 e coloque algum texto;
+    let paragraph = document.createElement('p');
+    paragraph.innerText = 'Trabalhando com elementos';
+    document.querySelector('.center-content').appendChild(paragraph);
+
 //5. Adicione a tag div com a classe left-content como filho da tag div criada no passo 2;
+        
+
 //6. Adicione a tag div com a classe right-content como filho da tag div criada no passo 2;
 //7. Adicione uma imagem com src configurado para o valor https://picsum.photos/200 e classe small-image . Esse elemento deve ser filho do div criado no passo 5;
 //8. Adicione uma lista não ordenada com os valores de 1 a 10 por extenso como valores da lista. Essa lista deve ser filha do div criado no passo 6;
