Added the <div> inside the first <div>, that we created on exercise 2, with a class

--- a/exercises/Block 5: JavaScript: DOM, Events and Web Storage/Day_02/exercise_01.html
+++ b/exercises/Block 5: JavaScript: DOM, Events and Web Storage/Day_02/exercise_01.html
@@ -79,7 +79,9 @@
     document.querySelector('.center-content').appendChild(paragraph);
 
 //5. Adicione a tag div com a classe left-content como filho da tag div criada no passo 2;
-        
+    let divLeftContent = document.createElement('div');
+    divLeftContent.className = 'left-content';
+    document.querySelector('.main-content').appendChild(divLeftContent);   
 
 //6. Adicione a tag div com a classe right-content como filho da tag div criada no passo 2;
 //7. Adicione uma imagem com src configurado para o valor https://picsum.photos/200 e classe small-image . Esse elemento deve ser filho do div criado no passo 5;
