--- a/exercises/Block 5: JavaScript: DOM, Events and Web Storage/Day_02/exercise_01.html
+++ b/exercises/Block 5: JavaScript: DOM, Events and Web Storage/Day_02/exercise_01.html
@@ -89,6 +89,11 @@
     document.querySelector('.main-content').appendChild(divRightContent);
 
 //7. Adicione uma imagem com src configurado para o valor https://picsum.photos/200 e classe small-image . Esse elemento deve ser filho do div criado no passo 5;
+    let imageSrc = document.createElement('img');
+    imageSrc.className = 'small-image'
+    imageSrc.src = 'https://picsum.photos/200';
+    document.querySelector('.left-content').appendChild(imageSrc);
+
 //8. Adicione uma lista não ordenada com os valores de 1 a 10 por extenso como valores da lista. Essa lista deve ser filha do div criado no passo 6;
 //9. Adicione 3 tags h3 , todas sendo filhas do div criado no passo 2.
 
