--- a/exercises/Block 5: JavaScript: DOM, Events and Web Storage/Day_02/exercise_01.html
+++ b/exercises/Block 5: JavaScript: DOM, Events and Web Storage/Day_02/exercise_01.html
@@ -95,6 +95,16 @@
     document.querySelector('.left-content').appendChild(imageSrc);
 
 //8. Adicione uma lista não ordenada com os valores de 1 a 10 por extenso como valores da lista. Essa lista deve ser filha do div criado no passo 6;
+    let arrayOfNumbers = ['um' , 'dois', 'três', 'quatro', 'cinco', 'seis', 'sete', 'oito', 'nove', 'dez']
+    let unorderedList = document.createElement('ul');
+    document.querySelector('.right-content').appendChild(unorderedList);
+
+    for (let item of arrayOfNumbers){
+    let listItem = document.createElement('li');
+    listItem.innerText = item;
+    document.querySelector('ul').appendChild(listItem);
+}
+
 //9. Adicione 3 tags h3 , todas sendo filhas do div criado no passo 2.
 
 // → Agora que você criou muita coisa, vamos fazer algumas alterações e remoções:
