--- a/exercises/Block 5: JavaScript: DOM, Events and Web Storage/Day_02/exercise_01.html
+++ b/exercises/Block 5: JavaScript: DOM, Events and Web Storage/Day_02/exercise_01.html
@@ -106,6 +106,10 @@
 }
 
 //9. Adicione 3 tags h3 , todas sendo filhas do div criado no passo 2.
+    for ( let index = 0; index < 3; index += 1){
+    let newTag = document.createElement('h3');
+    document.querySelector('.main-content').appendChild(newTag);
+}
 
 // → Agora que você criou muita coisa, vamos fazer algumas alterações e remoções:
 
