Added a class at the <h1>

--- a/exercises/Block 5: JavaScript: DOM, Events and Web Storage/Day_02/exercise_01.html
+++ b/exercises/Block 5: JavaScript: DOM, Events and Web Storage/Day_02/exercise_01.html
@@ -58,12 +58,12 @@
   <body>
     <script>
 //1. Adicione a tag h1 com o texto Exercício 5.2 - JavaScript DOM como filho da tag body ;
-    let addTag = document.createElement("h1");
-    addTag.innerText =  'Exercício 5.2 - JavaScript DOM';
+    let addTagH1 = document.createElement("h1");
+    addTagH1.innerText =  'Exercício 5.2 - JavaScript DOM';
     let body = document.querySelector('body');
-    body.appendChild(addTag);
+    body.appendChild(addTagH1);
        
-//2. Adicione a tag div com a classe main-content como filho da tag body ;
+//2. Adicione a tag div com a classe <main-content> como filho da tag body ;
     let divMainContent = document.createElement('div');
     divMainContent.className = 'main-content';
     body.appendChild(divMainContent);
@@ -114,8 +114,16 @@
 // → Agora que você criou muita coisa, vamos fazer algumas alterações e remoções:
 
 //10. Adicione a classe title na tag h1 criada;
+    addTagH1.className = 'title';
+
 //11. Adicione a classe description nas 3 tags h3 criadas;
+    let tagH3 = document.getElementsByTagName('h3');
+    for ( let item of tagH3){
+    item.className = 'description';
+}
+
 //12. Remova o div criado no passo 5 (aquele que possui a classe left-content ). Utilize a função .removeChild() ;
+    
 //13. Centralize o div criado no passo 6 (aquele que possui a classe right-content ). Dica: para centralizar, basta configurar o margin-right: auto do div ;
 //14. Troque a cor de fundo do elemento pai da div criada no passo 3 (aquela que possui a classe center-content ) para a cor verde;
 //15. Remova os dois últimos elementos ( nove e dez ) da lista criada no passo 8.
