--- a/exercises/Block 5: JavaScript: DOM, Events and Web Storage/Day_02/exercise_01.html
+++ b/exercises/Block 5: JavaScript: DOM, Events and Web Storage/Day_02/exercise_01.html
@@ -123,9 +123,14 @@
 }
 
 //12. Remova o div criado no passo 5 (aquele que possui a classe left-content ). Utilize a função .removeChild() ;
+    document.querySelector('.main-content').removeChild(document.querySelector('.main-content .left-content'))
 
 //13. Centralize o div criado no passo 6 (aquele que possui a classe right-content ). Dica: para centralizar, basta configurar o margin-right: auto do div ;
+    document.querySelector('.right-content').style.marginRight = 'auto';
+
 //14. Troque a cor de fundo do elemento pai da div criada no passo 3 (aquela que possui a classe center-content ) para a cor verde;
+    document.querySelector('.center-content').style.backgroundColor = 'rgb( 76 , 164 , 106)';
+
 //15. Remova os dois últimos elementos ( nove e dez ) da lista criada no passo 8.
     </script>
   </body>
