--- a/exercises/Block 6 - HTML and CSS: Forms, Flexbox and Responsive/Day_02_JavaScript Libraries and CSS Frameworks/form.html
+++ b/exercises/Block 6 - HTML and CSS: Forms, Flexbox and Responsive/Day_02_JavaScript Libraries and CSS Frameworks/form.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
+      crossorigin="anonymous"
+    />
     <title>Trybe's Form</title>
   </head>
   <body>
@@ -16,128 +21,67 @@
       <form id="form-content" method="GET">
         <fieldset id="personal-info">
           <legend>Personal Info:</legend>
-          <label for="name-input">Full name:</label>
-          <input
-            type="text"
-            id="name-input"
-            name="full-name"
-            maxlength="40"
-            placeholder="Type your name here"
-            required
-          />
+          <div class="row">
+            <div class="col">
+              <label for="name-input" class="form-label">First name:</label>
+              <input type="text" class="form-control" placeholder="First name" aria-label="First name" required>
+            </div>
+            <div class="col">
+              <label for="name-input" class="form-label">Last name:</label>
+              <input type="text" class="form-control" placeholder="Last name" aria-label="Last name" required>
+            </div>
+          </div>
           <br />
-          <label for="email-input">E-mail:</label>
-          <input
-            type="email"
-            id="email-input"
-            name="email"
-            maxlength="50"
-            placeholder="username@email.com"
-            required
-          />
-          <br />
-          <label for="cpf-input">CPF:</label>
-          <input
-            type="text"
-            id="cpf-input"
-            name="cpf"
-            maxlength="11"
-            placeholder="Numbers only"
-            required
-          />
-          <br />
-          <label for="address-input">Address:</label>
-          <input
-            type="text"
-            id="address-input"
-            name="address"
-            maxlength="200"
-            placeholder="Street, number - complement"
-            required
-          />
-          <br />
-          <label for="city-input">City:</label>
-          <input
-            type="text"
-            id="city-input"
-            name="city"
-            maxlength="28"
-            placeholder="Type your city here"
-            required
-          />
-          <br />
-          <label for="state-input">State:</label>
-          <select id="state-input" required>
-            <option style="display: none"></option>
-          </select>
-          <br />
-          <label for="house-radio">
-            <input
-              type="radio"
-              id="house-radio"
-              name="building-type"
-              value="House"
-              required
-            />
-            House
-          </label>
-          <label for="appartement-radio">
-            <input
-              type="radio"
-              id="appartement-radio"
-              name="building-type"
-              value="Appartement"
-              required
-            />
-            Appartement
-          </label>
-        </fieldset>
-        <fieldset id="professional-info">
-          <legend>Professional Info:</legend>
-          <label for="resume-input">Résumé Info:</label>
-          <textarea
-            id="resume-input"
-            name="resume-info"
-            maxlength="1000"
-            placeholder="Maximum 1000 characters"
-            required
-          ></textarea>
-          <br />
-          <label for="post-input">Post:</label>
-          <input
-            type="text"
-            id="post-input"
-            name="post"
-            maxlength="40"
-            placeholder="Job position"
-            required
-          />
-          <br />
-          <label for="job-description-input">Job description:</label>
-          <textarea
-            id="job-description-input"
-            name="job-description"
-            maxlength="500"
-            placeholder="Maximum 500 characters"
-            required
-          ></textarea>
-          <br />
-          <label for="job-date-input">Date started:</label>
-          <input
-            type="text"
-            id="job-date-input"
-            name="job-date"
-            placeholder="dd/mm/aaaa"
-            required
-          />
-        </fieldset>
-        <button type="submit" id="submit-button" name="Submit">Submit</button>
-        <input type="reset" id="reset-button" />
-      </form>
-      <div id="submit-info" class="submit-info-content"></div>
+          <form class="row g-3">
+            <div class="col-md-6">
+              <label for="inputEmail4" class="form-label">Email</label>
+              <input type="email" class="form-control" id="inputEmail4" maxlength="50" placeholder="username@email.com">
+              <div id="emailHelp" class="form-text">
+                We'll never share your email with anyone else.
+              </div>
+            </div>
+            <div class="col-md-6">
+              <label for="inputPassword4" class="form-label">Password</label>
+              <input type="password" class="form-control" id="inputPassword4">
+            </div>
+            <div class="col-12">
+              <label for="inputAddress" class="form-label">Address</label>
+              <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+            </div>
+            <div class="col-12">
+              <label for="inputAddress2" class="form-label">Address 2</label>
+              <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+            </div>
+            <div class="row g-3">
+              <div class="col-sm-7">
+                <input type="text" class="form-control" placeholder="City" aria-label="City">
+              </div>
+              <div class="col-sm">
+                <input type="text" class="form-control" placeholder="State" aria-label="State">
+              </div>
+              <div class="col-sm">
+                <input type="text" class="form-control" placeholder="Zip" aria-label="Zip">
+              </div>
+            </div>
+        </form>
+        <div class="col-12">
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" id="gridCheck">
+            <label class="form-check-label" for="gridCheck">
+              Check me out
+            </label>
+          </div>
+        </div>
+        <div class="col-12">
+          <button type="submit" class="btn btn-primary">Sign in</button>
+        </div>
     </main>
     <script src="script.js"></script>
     <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
